--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Mecânica - Deboxe Customs</title>
 
-<title>Deboxe Customs - Mecânica Oficial</title>
 <link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 
 <!-- Bootstrap -->
@@ -19,25 +19,26 @@
 <style>
 :root{
   --preto:#0b0b0b;
-  --vermelho:#c40000;
+  --vermelho:#e10600;
   --dourado:#ffcc00;
-  --cinza:#f5f5f5;
 }
 
+/* ===== BASE ===== */
 body{
-  margin:0;
-  font-family:'Inter',sans-serif;
-  background:#ffffff;
+  font-family:'Inter',system-ui,sans-serif;
+  background:#ffffff; /* FUNDO BRANCO */
   color:#222;
+  margin:0;
 }
 
-/* ===== MENU ===== */
-header, nav{
-  background:#000;
-  border-bottom:4px solid var(--vermelho);
+/* ===== TOPO ===== */
+.topbar{
+  background:linear-gradient(90deg,#000,#1a0000,#000);
+  border-bottom:2px solid var(--vermelho);
+  padding:14px 0;
 }
 
-.navbar-brand{
+.logo{
   font-weight:800;
   font-size:1.2rem;
   background:linear-gradient(135deg,var(--vermelho),var(--dourado));
@@ -45,260 +46,189 @@ header, nav{
   -webkit-text-fill-color:transparent;
 }
 
-.nav-link{
-  color:#fff !important;
+.nav-links a{
+  color:#ffffff;
+  margin-left:20px;
   font-weight:600;
+  text-decoration:none;
+  position:relative;
 }
 
-.nav-link:hover{
-  color:var(--dourado) !important;
+.nav-links a:hover{
+  color:var(--dourado);
 }
 
-.btn-discord{
+.discord-btn{
+  margin-left:25px;
+  padding:8px 16px;
+  border-radius:14px;
+  font-weight:700;
   background:linear-gradient(135deg,var(--vermelho),var(--dourado));
   color:#000;
-  font-weight:700;
-  border-radius:14px;
-  padding:6px 14px;
   text-decoration:none;
 }
 
-/* ===== HERO ===== */
-.hero{
-  padding:80px 20px;
-  text-align:center;
-}
-
-.hero img{
-  max-width:260px;
-}
-
-.hero h1{
-  font-weight:900;
-  margin-top:20px;
-}
-
-/* ===== SEÇÕES ===== */
-.section{
-  padding:70px 0;
-}
-
-.section-title{
-  text-align:center;
-  font-weight:900;
-  margin-bottom:50px;
-}
-
-.section-title::after{
-  content:"";
-  width:90px;
-  height:4px;
-  background:linear-gradient(90deg,var(--vermelho),var(--dourado));
-  display:block;
-  margin:15px auto 0;
-  border-radius:3px;
-}
-
-/* ===== SOBRE ESCURO ===== */
-#sobre{
-  background:#0b0b0b;
-  color:#f1f1f1;
-}
-
-#sobre p{
-  color:#dcdcdc;
-}
-
 /* ===== CURSOS ===== */
-.card-curso{
-  border-radius:18px;
+.card-service{
+  border-radius:16px;
+  overflow:hidden;
+  background:#ffffff; /* CONTRASTE */
   border:1px solid #ddd;
   transition:.3s;
-  background:#fff;
 }
 
-.card-curso:hover{
-  transform:translateY(-6px);
-  box-shadow:0 10px 25px rgba(0,0,0,.15);
+.card-service:hover{
+  transform:translateY(-5px);
+  box-shadow:0 0 30px rgba(225,6,0,.25);
 }
 
-.card-curso img{
+.card-service img{
   height:180px;
   object-fit:contain;
-  padding:15px;
-  background:#f7f7f7;
+  background:#f5f5f5;
 }
 
-.video-curso iframe{
-  border-radius:18px;
-  border:1px solid #ddd;
+/* TEXTO DO CURSO MAIS FORTE */
+.card-service .card-body{
+  font-weight:700;
+  color:#111;
+  background:#ffffff;
 }
 
-/* ===== REGRAS ===== */
-.regra-card{
-  background:#fff;
-  border:1px solid #ddd;
+/* ===== CARDS REGRAS ===== */
+.cards-animated{
+  display:grid;
+  grid-template-columns:repeat(auto-fit,minmax(260px,1fr));
+  gap:25px;
+  margin-top:60px;
+}
+
+.card-animated{
+  background:#111;
   border-radius:18px;
-  padding:30px;
+  padding:30px 25px;
   text-align:center;
+  color:#eee;
 }
 
-.regra-card i{
+.glow-red{
+  color:var(--vermelho);
   font-size:46px;
+  text-shadow:0 0 10px var(--vermelho);
 }
 
-.red{color:var(--vermelho)}
-.gold{color:var(--dourado)}
+.glow-yellow{
+  color:var(--dourado);
+  font-size:46px;
+  text-shadow:0 0 10px var(--dourado);
+}
+
+/* ===== SOBRE ===== */
+.about-section{
+  background:#0e0e0e; /* SOBRE MAIS ESCURO */
+  border-radius:18px;
+  padding:40px 25px;
+  margin-top:60px;
+  color:#eaeaea;
+}
+
+.about-section p{
+  color:#d0d0d0;
+}
+
+.about-section img{
+  max-width:240px;
+}
 
 /* ===== FOOTER ===== */
 footer{
-  background:#fff;
+  background:#ffffff;
   border-top:1px solid #ddd;
-  text-align:center;
-  padding:20px;
-  font-size:.9rem;
+  color:#666;
 }
 
-body{
-  user-select:none;
-}
 </style>
 </head>
 
 <body oncontextmenu="return false">
 
-<!-- ===== MENU ===== -->
-<nav class="navbar navbar-expand-lg navbar-dark">
-  <div class="container">
-    <a class="navbar-brand" href="#">Deboxe Customs</a>
+<header class="topbar">
+<div class="container d-flex justify-content-between align-items-center">
+  <div class="d-flex align-items-center gap-3">
+    <img src="https://imgur.com/Nw9g2Q2.png" height="80" draggable="false">
+    <div class="logo">Deboxe Customs</div>
+  </div>
 
-    <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#menu">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+  <nav class="d-none d-md-flex align-items-center nav-links">
+    <a href="#">Início</a>
+    <a href="tabela.html">Preços</a>
+    <a href="funcionarios.html">Funcionários</a>
+    <a href="https://discord.gg/YuUsJGfH" target="_blank" class="discord-btn">
+      <i class="fa-brands fa-discord"></i> Discord
+    </a>
+  </nav>
+</div>
+</header>
 
-    <div class="collapse navbar-collapse" id="menu">
-      <ul class="navbar-nav ms-auto align-items-center">
-        <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
-        <li class="nav-item"><a class="nav-link" href="#sobre">Sobre</a></li>
-        <li class="nav-item"><a class="nav-link" href="#cursos">Cursos</a></li>
-        <li class="nav-item"><a class="nav-link" href="#regras">Regras</a></li>
-        <li class="nav-item">
-          <a class="btn-discord ms-3" href="https://discord.gg/YuUsJGfH" target="_blank">
-            <i class="fa-brands fa-discord"></i> Discord
-          </a>
-        </li>
-      </ul>
+<main class="container my-5">
+
+<section class="mb-5">
+<h2 class="text-center mb-4">Nossos Cursos</h2>
+<div class="row justify-content-center">
+  <div class="col-md-4">
+    <div class="card card-service" data-bs-toggle="modal" data-bs-target="#ConsertoModal">
+      <img src="https://i.imgur.com/LTGWCKU.png">
+      <div class="card-body text-center">Conserto de Veículos</div>
     </div>
   </div>
-</nav>
-
-<!-- ===== HERO ===== -->
-<section class="hero" id="inicio">
-  <img src="https://imgur.com/Nw9g2Q2.png">
-  <h1>Deboxe Customs</h1>
-  <p>Mecânica oficial focada em RP sério, organização e excelência.</p>
+  <div class="col-md-4">
+    <div class="card card-service" data-bs-toggle="modal" data-bs-target="#TunningModal">
+      <img src="https://imgur.com/NnaqrpG.png">
+      <div class="card-body text-center">Tunning de Veículos</div>
+    </div>
+  </div>
+</div>
 </section>
 
-<!-- ===== SOBRE ===== -->
-<section class="section" id="sobre">
-  <div class="container">
-    <h2 class="section-title text-light">Sobre Nós</h2>
-    <p class="text-center mx-auto" style="max-width:900px">
-      A <strong>Deboxe Customs</strong> é referência em mecânica dentro da cidade,
-      atuando com profissionalismo, hierarquia e respeito às regras.
-      Trabalhamos com consertos, tunagem e personalização, sempre mantendo
-      a imersão e o roleplay de alto nível.
+<section class="cards-animated">
+<div class="card-animated">
+  <i class="fa-solid fa-car glow-red"></i>
+  <h3>Veículos Restritos</h3>
+  <p>Proibido modificar veículos da prefeitura.</p>
+</div>
+
+<div class="card-animated">
+  <i class="fa-solid fa-coins glow-yellow"></i>
+  <h3>Valores da Tabela</h3>
+  <p>Cobranças fora da tabela resultam em punições.</p>
+</div>
+</section>
+
+<section class="about-section">
+<h2 class="text-center mb-4">Sobre Nós</h2>
+<div class="row align-items-center">
+  <div class="col-md-6 text-center">
+    <img src="https://imgur.com/Nw9g2Q2.png">
+  </div>
+  <div class="col-md-6">
+    <p>
+      A <strong>Deboxe Customs</strong> é referência em mecânica na Central RP,
+      trabalhando com seriedade, organização e respeito às regras da cidade.
     </p>
   </div>
+</div>
 </section>
 
-<!-- ===== CURSOS + VÍDEOS ===== -->
-<section class="section" id="cursos">
-  <div class="container">
-    <h2 class="section-title">Cursos & Treinamentos</h2>
+</main>
 
-    <div class="row g-4 mb-5">
-      <div class="col-md-4">
-        <div class="card card-curso p-3 text-center">
-          <img src="https://i.imgur.com/LTGWCKU.png">
-          <h5>Conserto de Veículos</h5>
-          <p>Manutenção completa seguindo a tabela oficial.</p>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card card-curso p-3 text-center">
-          <img src="https://imgur.com/NnaqrpG.png">
-          <h5>Tuning de Veículos</h5>
-          <p>Customizações autorizadas e RP técnico.</p>
-        </div>
-      </div>
-
-      <div class="col-md-4">
-        <div class="card card-curso p-3 text-center">
-          <img src="https://imgur.com/Nw9g2Q2.png">
-          <h5>Conduta RP</h5>
-          <p>Postura profissional e atendimento correto.</p>
-        </div>
-      </div>
-    </div>
-
-    <!-- VÍDEOS DOS CURSOS -->
-    <div class="row g-4 video-curso">
-      <div class="col-md-6">
-        <iframe width="100%" height="315"
-        src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-      </div>
-      <div class="col-md-6">
-        <iframe width="100%" height="315"
-        src="https://www.youtube.com/embed/dQw4w9WgXcQ" allowfullscreen></iframe>
-      </div>
-    </div>
-
-  </div>
-</section>
-
-<!-- ===== REGRAS ===== -->
-<section class="section bg-light" id="regras">
-  <div class="container">
-    <h2 class="section-title">Regras</h2>
-    <div class="row g-4">
-      <div class="col-md-4">
-        <div class="regra-card">
-          <i class="fa-solid fa-car red"></i>
-          <h5>Veículos Restritos</h5>
-          <p>Proibido modificar veículos públicos.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="regra-card">
-          <i class="fa-solid fa-coins gold"></i>
-          <h5>Tabela Oficial</h5>
-          <p>Valores fora da tabela resultam em punição.</p>
-        </div>
-      </div>
-      <div class="col-md-4">
-        <div class="regra-card">
-          <i class="fa-solid fa-user-shield red"></i>
-          <h5>Conduta</h5>
-          <p>Respeito e hierarquia são obrigatórios.</p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-
-<footer>
-  © <span id="ano"></span> Deboxe Customs — Todos os direitos reservados
+<footer class="text-center py-4">
+© <span id="year"></span> Deboxe Customs — Todos os direitos reservados
 </footer>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 <script>
-document.getElementById("ano").innerText = new Date().getFullYear();
-document.addEventListener("keydown", e=>{
-  if(e.keyCode==123) e.preventDefault();
-  if(e.ctrlKey && e.shiftKey && ["I","J","C"].includes(e.key)) e.preventDefault();
-});
+document.getElementById('year').textContent = new Date().getFullYear();
+document.onkeydown = e => (e.key==="F12") && e.preventDefault();
 </script>
 
 </body>
