--- a/index.html
+++ b/index.html
@@ -7,21 +7,14 @@
 
 <link rel="icon" href="https://imgur.com/Nw9g2Q2.png">
 
-<!-- Bootstrap -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-
-<!-- Font Awesome -->
 <script src="https://kit.fontawesome.com/a2d9b1d7a1.js" crossorigin="anonymous"></script>
-
-<!-- Fonte -->
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
 :root{
-  --preto:#0b0b0b;
   --vermelho:#e10600;
   --dourado:#ffcc00;
-  --cinza:#f5f5f5;
 }
 
 body{
@@ -65,9 +58,7 @@ body{
   transition:.3s;
 }
 
-.nav-links a:hover::after{
-  width:100%;
-}
+.nav-links a:hover::after{width:100%;}
 
 .discord-btn{
   margin-left:25px;
@@ -86,7 +77,6 @@ body{
   background:#fff;
   border:1px solid #ddd;
   transition:.3s;
-  cursor:pointer;
 }
 
 .card-service:hover{
@@ -96,15 +86,14 @@ body{
 
 .card-service img{
   height:180px;
-  object-fit:cover;
   width:100%;
+  object-fit:cover;
 }
 
 .card-service .card-body{
+  text-align:center;
   font-weight:700;
   font-size:1.1rem;
-  color:#000;
-  text-align:center;
 }
 
 /* ===== REGRAS ===== */
@@ -119,28 +108,30 @@ body{
   background:#111;
   color:#eee;
   border-radius:18px;
-  padding:30px 25px;
+  padding:35px 25px;
   text-align:center;
   position:relative;
   overflow:hidden;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
 }
 
-/* animações */
-@keyframes pulseRed{
-  0%{box-shadow:0 0 10px rgba(225,6,0,.3)}
-  50%{box-shadow:0 0 35px rgba(225,6,0,.8)}
-  100%{box-shadow:0 0 10px rgba(225,6,0,.3)}
+/* ANIMAÇÃO ÚNICA – PADRÃO LOGO */
+@keyframes logoGlow{
+  0%{box-shadow:0 0 12px rgba(225,6,0,.4)}
+  50%{box-shadow:0 0 40px rgba(255,204,0,.9)}
+  100%{box-shadow:0 0 12px rgba(225,6,0,.4)}
 }
 
-@keyframes pulseGold{
-  0%{box-shadow:0 0 10px rgba(255,204,0,.3)}
-  50%{box-shadow:0 0 35px rgba(255,204,0,.8)}
-  100%{box-shadow:0 0 10px rgba(255,204,0,.3)}
-}
-
-@keyframes scan{
+@keyframes logoScan{
   from{left:-100%}
   to{left:100%}
+}
+
+.card-animated{
+  animation:logoGlow 3s infinite;
 }
 
 .card-animated::after{
@@ -150,40 +141,42 @@ body{
   left:-100%;
   width:100%;
   height:100%;
-  background:linear-gradient(90deg,transparent,rgba(255,255,255,.15),transparent);
-}
-
-.card-animated.alert{
-  animation:pulseRed 2.5s infinite;
-}
-
-.card-animated.warning{
-  animation:pulseGold 2.5s infinite;
-}
-
-.card-animated.alert::after,
-.card-animated.warning::after{
-  animation:scan 2s linear infinite;
+  background:linear-gradient(90deg,transparent,rgba(255,255,255,.18),transparent);
+  animation:logoScan 2.2s linear infinite;
 }
 
 .card-animated:hover{
   transform:translateY(-6px) scale(1.03);
 }
 
-.glow-red{color:var(--vermelho);font-size:46px;}
-.glow-yellow{color:var(--dourado);font-size:46px;}
+.glow-red{
+  color:var(--vermelho);
+  font-size:46px;
+  margin-bottom:12px;
+}
+
+.glow-yellow{
+  color:var(--dourado);
+  font-size:46px;
+  margin-bottom:12px;
+}
 
 /* ===== SOBRE ===== */
 .about-section{
   background:#111;
   color:#eee;
   border-radius:18px;
-  padding:40px 25px;
+  padding:45px 30px;
   margin-top:60px;
 }
 
 .about-section img{
   max-width:240px;
+}
+
+.about-section p{
+  line-height:1.7;
+  font-size:1rem;
 }
 
 /* ===== FOOTER ===== */
@@ -233,30 +226,51 @@ footer{
 </section>
 
 <section class="cards-animated">
-  <div class="card-animated alert">
+  <div class="card-animated">
     <i class="fa-solid fa-car glow-red"></i>
     <h3>Veículos Restritos</h3>
-    <p>Proibido modificar viaturas, veículos públicos ou de serviços.</p>
+    <p>
+      É expressamente proibido realizar qualquer tipo de modificação, reparo,
+      tunagem ou alteração estética em veículos pertencentes à prefeitura,
+      forças de segurança, serviços públicos ou veículos institucionais.
+    </p>
   </div>
 
-  <div class="card-animated warning">
+  <div class="card-animated">
     <i class="fa-solid fa-coins glow-yellow"></i>
     <h3>Valores da Tabela</h3>
-    <p>Cobranças fora da tabela geram punições severas.</p>
+    <p>
+      Todos os serviços devem seguir rigorosamente a tabela oficial de preços.
+      Cobranças acima ou abaixo do valor estipulado resultam em advertências,
+      punições internas e possível desligamento da mecânica.
+    </p>
   </div>
 </section>
 
 <section class="about-section">
 <h2 class="text-center mb-4">Sobre Nós</h2>
 <div class="row align-items-center">
-  <div class="col-md-6 text-center">
+  <div class="col-md-6 text-center mb-4 mb-md-0">
     <img src="https://imgur.com/Nw9g2Q2.png">
   </div>
   <div class="col-md-6">
     <p>
-      A <strong>Deboxe Customs</strong> é referência em mecânica na Central RP,
-      atuando com consertos, tunagem e personalização, sempre seguindo as regras
-      da cidade e mantendo o mais alto padrão de RP.
+      A <strong>Deboxe Customs</strong> é uma mecânica consolidada dentro da Central RP,
+      reconhecida pela seriedade, organização e alto padrão de Roleplay.
+      Atuamos com serviços de conserto, manutenção, tunagem e personalização
+      de veículos, sempre respeitando as regras da cidade e prezando pela
+      imersão e profissionalismo.
+    </p>
+    <p>
+      Nossa equipe é composta por mecânicos experientes e comprometidos,
+      focados em oferecer atendimento de qualidade, preços justos e
+      transparência em todos os serviços prestados. Trabalhamos para manter
+      um ambiente organizado, respeitoso e alinhado com a administração da cidade.
+    </p>
+    <p>
+      Na Deboxe Customs, cada veículo é tratado com atenção aos detalhes,
+      garantindo segurança, desempenho e estética, sempre dentro dos limites
+      permitidos pelo RP.
     </p>
   </div>
 </div>
@@ -265,10 +279,10 @@ footer{
 </main>
 
 <footer class="text-center py-4">
-© <span id="year"></span> Deboxe Customs
+© <span id="year"></span> Deboxe Customs — Todos os direitos reservados
 </footer>
 
-<!-- MODAIS -->
+<!-- MODAIS YOUTUBE -->
 <div class="modal fade" id="ConsertoModal" tabindex="-1">
   <div class="modal-dialog modal-lg modal-dialog-centered">
     <div class="modal-content">
